# jacobs_ml_fundamentals

./: .gitignore  README.md  pyproject.toml
projects/basketball_player_position_classification/: download_data_from_s3.py  notebook.ipynb  workings.ipynb
projects/basketball_player_position_classification/data/: advanced_post.csv  gamelog_urls.csv  last5.csv  per_game_stats_post.csv  per_minute_stats_post.csv  shooting.csv  shooting_post.csv  stathead_insights.csv  totals_stats_post.csv
utils/: s3_helpers.py
