[project]
name = "jacobs-ml-fundamentals"
version = "0.1.0"
description = "This repo is a collection of various small/mid sized ML projects for practice and showcasing purposes."
authors = [
    {name = "7AC0B"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "boto3 (>=1.38.32,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
